# CCL-NMF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ccl_nmf/: C_map_calc.py  L_map_calc.py  aa.py  jointNMF.py  models.py  run_jointNMF.py
data/aa_input/: ref_covariates.csv  ref_features.csv  target_covariates.csv  target_features.csv
data/aa_output/: heldout_features.csv  heldout_participants.csv  train_features.csv  train_participants.csv  val_features.csv  val_participants.csv
data/lme_input/: target_longitudinal.csv
